# swaneval

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_SPEC.md  CLAUDE.md  Dockerfile  README-CHINESE.md  README.md  docker-bake.hcl  docker-compose.yml  skills-lock.json
backend/: Dockerfile  README.md  TEST_GUIDE.md  alembic.ini  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_user_tokens.py  0003_add_cancelled_status.py  0004_rename_script_to_sandbox.py  0005_add_rbac_tables.py  0006_add_compute_clusters.py  0007_add_result_error_tracking.py  0008_dataset_version_management.py  0009_model_and_criteria_phase2.py  0010_task_queue_and_checkpoint.py  0011_persistent_reports.py  0012_report_visibility.py  0013_cluster_memory_bigint.py  0014_cluster_vllm_image.py  0015_model_deployment_name.py  0016_cluster_gpu_operator.py  3c480426f2f1_add_model_fields.py  a1b2c3d4e5f6_add_api_format.py  b2c3d4e5f6a7_add_dataset_subscription.py  c3d4e5f6a7b8_add_task_hardware_fields.py  d4e5f6a7b8c9_add_external_benchmarks.py  e5f6a7b8c9d0_add_user_nickname.py
backend/app/: config.py  database.py  errors.py  main.py  metrics.py  security.py  worker.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  benchmarks.py  clusters.py  criteria.py  datasets.py  evaluations.py  metrics.py  models.py  permissions.py  reports.py  results.py  tasks.py  users.py
backend/app/data/: preset_criteria.json  preset_datasets.json
backend/app/db/: __init__.py  models.py
backend/app/models/: __init__.py  compute_cluster.py  criterion.py  dataset.py  eval_result.py  eval_task.py  external_benchmark.py  llm_model.py  permission.py  report.py  user.py
backend/app/schemas/: auth.py  cluster.py  criterion.py  dataset.py  model.py  permission.py  result.py  task.py
backend/app/services/: auth.py  benchmark_puller.py  dataset_deletion.py  dataset_import.py  dataset_stats.py  dataset_sync.py  encryption.py  evalscope_adapter.py  evalscope_client.py  evalscope_result_ingestor.py  evaluators.py  gpu_operator.py  import_progress.py  k8s_client.py  k8s_manager.py  k8s_vllm.py  model_connectivity.py  perplexity.py  rbac.py  report_generator.py  task_failures.py  task_queue.py  task_runner.py
backend/app/services/storage/: __init__.py  base.py  file_io.py  local.py  (+2 more)
backend/test_docs/: run_e2e_evalscope_api_test.py  shared_storage_verification_guide.md
backend/tests/: test_dataset_deletion.py  test_dataset_sync.py  test_errors.py  test_evalscope_adapter.py  test_evalscope_result_ingestor.py  test_evaluators.py  test_model_connectivity.py  test_models_api.py  test_real_model_api_e2e.py  test_result_validation.py  test_storage.py  test_task_queue.py
(+105 files in other folders)
