[project]
name = "evalscope-gui-backend"
version = "0.1.0"
description = "Backend for EvalScope GUI - Enterprise model evaluation platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.16",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "celery[redis]>=5.3.6",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.1.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "greenlet>=3.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
