[project]
name = "evalscope-gui-backend"
version = "0.1.0"
description = "Backend for EvalScope GUI - Enterprise model evaluation platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.16",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "greenlet>=3.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "boto3>=1.34.0",
    "aiosqlite>=0.20.0",
    "huggingface-hub>=0.25.0",
    "modelscope>=1.18.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "prometheus-client>=0.24.1",
    "kubernetes>=35.0.0",
    "cryptography>=46.0.5",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"*.json" = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
